syntax = "proto3";

// 找不到timestamp的话需要去官网下载
import "google/protobuf/timestamp.proto";

package event;

option go_package = "api/ev";

// 蜜罐事件
message HoneypotEvent {
  string                    id         = 1;
  string                    proto      = 2;
  string                    honeypot   = 3;
  string                    agent      = 4;
  google.protobuf.Timestamp start_time = 5;
  google.protobuf.Timestamp end_time   = 6;
  string                    src_ip     = 7;
  int32                     src_port   = 8;
  string                    dest_ip    = 9;
  int32                     dest_port  = 10;
  int32                     risk_level = 11;
}

message ReceiveEventRequest {
  repeated HoneypotEvent events = 1;
}

message Response {
  int32  code = 1;
  string msg  = 2;
}

message GetEventRequest {
  string event_id = 1;
}

message GetEventResponse {
  HoneypotEvent event = 1;
}

message ListEventRequest {
  int32 limit  = 1;
  int32 offset = 2;
}

message ListEventResponse {
  repeated HoneypotEvent events = 1;
}

message Empty {
}

service EventService {
  rpc Ping (Empty) returns (Response) {};
  rpc ReceiveEvent (ReceiveEventRequest) returns (Response) {};
  rpc GetEvent (GetEventRequest) returns (GetEventResponse) {};
  rpc ListEvent (ListEventRequest) returns (ListEventResponse) {};
}
